# paperclipsAI

./: .gitignore  README.md  actions.py  bandits.py  linearFunctions.py  pyproject.toml  serve.sh  state.py  test.py
paperclips_ai/: __init__.py  adapter.py  bandits.py  learner.py  sarsa.py  state.py
playground/: 1-bandits.ipynb  2-linear-functions.ipynb  2-state.ipynb
