[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "paperclips_ai"
version = "0.1.0"
description = "AI agent that learns to play Universal Paperclips"
authors = ["Riley Kinahan <kinahanriley@gmail.com>"]
readme = "README.md"
repository = "https://github.com/r-dean/paperclipsAI"
